--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="cCard">
       <div class="cCardDeck">
         <div class="card" style="width: 25rem;">
-          <img class="card-img-top" src="img/1-min.jpg">
+          <img class="card-img-top" src="img/1.jpg">
           <div class="card-body">
             <h5 class="card-title">RESPONSIVE EMAIL TEMPLATE</h5>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -107,7 +107,7 @@
     <div class="eCardDeck">
       <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="img/1-min.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/1.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">FULLY LAYERED PSD</h5>
             <hr>
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="img/1-min.jpg" alt="Card image cap">
+          <img class="card-img-top" src="img/1.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">VERY GREAT MODULES</h5>
             <hr>
